[package]
name = "ordered-map"
version = "0.4.1"
authors = ["Incomplete <incomplete@aixon.co>"]
edition = "2018"
description = "A HashMap, with the capability of accessing the keys and values in order"
license = "MIT"
homepage = "https://github.com/qwfy/ordered-map"
repository = "https://github.com/qwfy/ordered-map.git"

[dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
