[package]
name = "ordered-map"
version = "0.5.0"
authors = ["Incomplete <incomplete@aixon.co>"]
edition = "2024"
description = "A HashMap, with the capability of accessing the keys and values in order"
license = "MIT"
homepage = "https://github.com/qwfy/ordered-map"
repository = "https://github.com/qwfy/ordered-map.git"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
